style.css
/* style.css */

* {
    margin: 0;
    padding: 0;
    font-family: 'Courier New', Courier, monospace;
}

html,
body {
    height: 100vh;
}

a {
    color: rgb(255, 255, 255);
}

.background {
    position: fixed;
    overflow: hidden;
    height: 100vh;
    width: 100vw;
    background-size: cover;
    background-color: rgb(255, 255, 255);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    backdrop-filter: blur(0.75vh);
    opacity: 0;
    animation: reveal-background 2s ease-in-out;
    animation-fill-mode: forwards;
    z-index: 1;
}

nav {
    position: fixed;
    bottom: 0;
    margin-left: 50vw;
    margin-bottom: 5vh;
    transform: translateX(-50%) scale(75%) translateY(25%);
    background-color: #00000044;
    backdrop-filter: blur(15px);
    width: auto;
    max-width: 90vw;
    height: max(10vh, 100px);
    border-radius: max(10vh, 100px);
    border: 1px solid #666;
    display: flex;
    justify-content: space-around;
    align-items: end;
    padding: 0 35px 0 35px;
    opacity: 0.5;
    transition: 0.2s;
    z-index: 5;
}

nav:hover {
    opacity: 1;
    transform: translateX(-50%) scale(100%) translateY(0);
}

nav > .hitbox {
    padding: 0 12.5px 0 12.5px;
    height: calc(max(10vh, 100px) * 1);
    width: calc(max(10vh, 100px) * 1);
    transition: 0.2s;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

nav > .hitbox > a {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

nav > .hitbox > a > .icon {
    background-color: #111;
    height: 90%;
    width: 90%;
    border-radius: calc(max(10vh, 100px) * 0.9);
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    cursor: pointer;
    box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.75);
}

nav > .hitbox:hover {
    width: calc(max(10vh, 100px) * 1.7);
    height: calc(max(10vh, 100px) * 1.7);
}

nav > .hitbox:hover + *,
nav > .hitbox:has(+ *:hover) {
    width: calc(max(10vh, 100px) * 1.35);
    height: calc(max(10vh, 100px) * 1.35);
}

nav > .hitbox:hover + * + *,
nav > .hitbox:has(+ * + *:hover) {
    width: calc(max(10vh, 100px) * 1.1);
    height: calc(max(10vh, 100px) * 1.1);
}

nav > .hitbox:hover + * + * + *,
nav > .hitbox:has(+ * + * + *:hover) {
    width: calc(max(10vh, 100px) * 1);
    height: calc(max(10vh, 100px) * 1);
}

nav > .hitbox > a > .icon > svg {
    width: calc(max(10vh, 100px) * 0.5);
    height: calc(max(10vh, 100px) * 0.5);
}

span.overlay {
    position: relative;
    opacity: 1;
    color: rgb(255, 255, 255);
    position: fixed;
    margin-left: 50%;
    margin-bottom: 1vh;
    transform: translateX(-50%);
    bottom: 0;
    font-size: 1.5vh;
}

.background-filter {
    position: fixed;
    overflow: hidden;
    height: 100vh;
    width: 100vw;
    background-color: rgb(127, 127, 127, 0.7);
    backdrop-filter: blur(1vh);
    padding: 10px;
    color: rgb(255, 255, 255);
    z-index: 2;
}

.reveal {
    width: 100vw;
    height: 100vh;
    background-color: rgba(100, 50, 50, 0.3);
    backdrop-filter: blur(1vh);
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    animation: reveal-slide 1s ease-in-out;
    animation-fill-mode: forwards;
    box-shadow: inset 0px 0px 50px 0px rgba(136, 136, 136, 1);
    text-align: center;
    z-index: 6;
}

.reveal>span {
    font-family: 'Times New Roman', Times, serif;
    font-style: italic;
    color: rgb(255, 255, 255);
    font-size: 3em;
}

.content {
    position: fixed;
    overflow: hidden;
    height: 100vh;
    width: 100vw;
    z-index: 4;
}

.segment {
    width: 100vw;
    min-height: 50vh;
    overflow: auto;
    display: flex;
    align-items: center;
    justify-content: space-around;
    z-index: 3;
}

.segment>#intro {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    background-color: rgba(30, 30, 30, 0.25);
    backdrop-filter: blur(1vh);
    box-shadow: inset 0px 0px 50px 0px rgba(60, 60, 60, 0.5);
    padding: 40px;
    border-radius: 40px;
    color: rgb(255, 255, 255);
    font-size: 2em;
}

.segment>#intro>img {
    width: 5em;
}

.segment>#intro>h2 {
    background-color: rgba(255, 255, 255, 0.25);
} 

@keyframes reveal-slide {
    0% {
        transform: translateY(0%);
    }

    50% {
        transform: translateY(0%);
    }

    65% {
        transform: translateY(10%);
        opacity: 1;
    }

    100% {
        transform: translateY(-100%);
        opacity: 0;
    }
}

@keyframes reveal-background {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@media screen and (max-width: 600px) {
    nav {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        height: auto;
        overflow: hidden;
        white-space: nowrap;
        justify-items: center;
        align-items: center;
    }

    nav:hover {
        opacity: 1;
        transform: translateX(-50%) scale(75%) translateY(25%);
    }

    nav > .hitbox:hover {
        transform: scale(100%);
        width: calc(max(10vh, 100px) * 0.9);
        height: calc(max(10vh, 100px) * 0.9);
    }

    nav > .hitbox:hover + *,
    nav > .hitbox:has(+ *:hover) {
        width: calc(max(10vh, 100px) * 0.9);
        height: calc(max(10vh, 100px) * 0.9);
    }

    nav > .hitbox:hover + * + *,
    nav > .hitbox:has(+ * + *:hover) {
        width: calc(max(10vh, 100px) * 0.9);
        height: calc(max(10vh, 100px) * 0.9);
    }

    nav > .hitbox:hover + * + * + *,
    nav > .hitbox:has(+ * + * + *:hover) {
        width: calc(max(10vh, 100px) * 0.9);
        height: calc(max(10vh, 100px) * 0.9);
    }
}

